--- a/05-advanced-python/05.02-interacting-with-the-OS---os.ipynb
+++ b/05-advanced-python/05.02-interacting-with-the-OS---os.ipynb
@@ -18,7 +18,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2022-05-07T09:26:39.679311Z",
+     "start_time": "2022-05-07T09:26:39.667302Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -53,14 +56,37 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "'/home/lijin/notes-python/05. advanced python'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-07T09:26:42.238542Z",
+     "start_time": "2022-05-07T09:26:42.195158Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/matao/study/code/notes-python_matao/05-advanced-python'"
       ]
      },
      "execution_count": 2,
@@ -82,9 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -102,6 +126,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-07T09:28:21.846048Z",
+     "start_time": "2022-05-07T09:28:21.830463Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['05.08-functions.ipynb',\n",
+       " 'my_database.sqlite',\n",
+       " '05.06-sql-databases.ipynb',\n",
+       " '05.07-object-relational-mappers.ipynb',\n",
+       " '05.14-the-operator-functools-itertools-toolz-fn-funcy-module.ipynb',\n",
+       " '05.03-comma-separated-values.ipynb',\n",
+       " '05.15-scope.ipynb',\n",
+       " '05.04-regular-expression.ipynb',\n",
+       " '05.10-generators.ipynb',\n",
+       " '05.13-decorator-usage.ipynb',\n",
+       " '05.11-context-managers-and-the-with-statement.ipynb',\n",
+       " '05.05-datetime.ipynb',\n",
+       " '05.12-decorators.ipynb',\n",
+       " '05.01-overview-of-the-sys-module.ipynb',\n",
+       " '05.09-iterators.ipynb',\n",
+       " '.ipynb_checkpoints',\n",
+       " '05.16-dynamic-code-execution.ipynb',\n",
+       " '05.02-interacting-with-the-OS---os.ipynb']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir(os.curdir)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -111,9 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -157,9 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -186,9 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -243,9 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -273,9 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -302,9 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -338,9 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -442,23 +494,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
