--- a/05-advanced-python/0509_迭代器_QA.ipynb
+++ b/05-advanced-python/0509_迭代器_QA.ipynb
@@ -24,9 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -55,9 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -86,9 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -114,9 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -140,9 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -161,9 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "StopIteration",
@@ -191,9 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -218,9 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -248,9 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -276,9 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -295,9 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -327,9 +305,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2022-05-10T00:43:48.529302Z",
+     "start_time": "2022-05-10T00:43:48.523300Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -342,7 +323,7 @@
     "    def __iter__(self):\n",
     "        return self\n",
     "    \n",
-    "    def next(self):\n",
+    "    def __next__(self):\n",
     "        self.index -= 1\n",
     "        if self.index >= 0:\n",
     "            return self.list[self.index]\n",
@@ -352,23 +333,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 在Python3.0中迭代器的规则原来是发生了一些变化的。\n",
+    "# 在新的迭代器规则中，迭代器对象应该实现__next__方法，而不是next。而新的内建函数next可以用于访问这个方法。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2022-05-10T00:43:50.161052Z",
+     "start_time": "2022-05-10T00:43:50.152267Z"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9 8 7 6 5 4 3 2 1 0\n"
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
      ]
     }
    ],
    "source": [
     "x = range(10)\n",
     "for i in ReverseListIterator(x):\n",
-    "    print i,"
+    "    print(i,)"
    ]
   },
   {
@@ -380,9 +383,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2022-05-10T00:42:58.537079Z",
+     "start_time": "2022-05-10T00:42:58.528111Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -394,7 +400,16 @@
     "    def __iter__(self):\n",
     "        return self\n",
     "    \n",
-    "    def next(self):\n",
+    "#     def next(self):\n",
+    "#         if self.value == 1:\n",
+    "#             raise StopIteration\n",
+    "#         elif self.value % 2 == 0:\n",
+    "#             self.value = self.value / 2\n",
+    "#         else:\n",
+    "#             self.value = 3 * self.value + 1\n",
+    "#         return self.value\n",
+    "    \n",
+    "    def __next__(self):\n",
     "        if self.value == 1:\n",
     "            raise StopIteration\n",
     "        elif self.value % 2 == 0:\n",
@@ -402,6 +417,16 @@
     "        else:\n",
     "            self.value = 3 * self.value + 1\n",
     "        return self.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 在Python3.0中迭代器的规则原来是发生了一些变化的。\n",
+    "# 在新的迭代器规则中，迭代器对象应该实现__next__方法，而不是next。而新的内建函数next可以用于访问这个方法。"
    ]
   },
   {
@@ -418,10 +443,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2022-05-10T00:43:01.248621Z",
+     "start_time": "2022-05-10T00:43:01.240872Z"
+    }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n",
+      "11.0\n",
+      "34.0\n",
+      "17.0\n",
+      "52.0\n",
+      "26.0\n",
+      "13.0\n",
+      "40.0\n",
+      "20.0\n",
+      "10.0\n",
+      "5.0\n",
+      "16.0\n",
+      "8.0\n",
+      "4.0\n",
+      "2.0\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 测试 - matao\n",
+    "for x in Collatz(7):\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -437,6 +499,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-10T00:44:14.358930Z",
+     "start_time": "2022-05-10T00:44:14.345340Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22 11.0\n",
+      "34.0 17.0\n",
+      "52.0 26.0\n",
+      "13.0 40.0\n",
+      "20.0 10.0\n",
+      "5.0 16.0\n",
+      "8.0 4.0\n",
+      "2.0 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test - matao\n",
+    "i = Collatz(7)\n",
+    "for x, y in zip(i, i):\n",
+    "    print(x, y)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -446,9 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -551,9 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -578,9 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -605,23 +693,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
